--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-jest": "^22.4.4",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "jest": "^22.4.4",
     "path": "^0.12.7",
     "style-loader": "^0.21.0",
     "webpack": "^4.8.3",
@@ -28,10 +30,9 @@
     "webpack-dev-server": "^3.1.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "./node_modules/.bin/webpack -w --config webpack.config.js",
-    "wds-cli": "./node_modules/.bin/webpack-dev-server --inline --hot --module-bind 'css-style-loader!css-loader' --module-bind 'jsx-react-hot-loader!babel-loader' --config webpack.dev-cli.config.js",
-    "wds": "./node_modules/.bin/webpack-dev-server --port 8070 --config webpack.config.js",
+    "wds": "./node_modules/.bin/webpack-dev-server --port 8080 --config webpack.config.js",
     "start": "webpack-dev-server --hot"
   },
   "repository": {
