--- a/package.json
+++ b/package.json
@@ -5,35 +5,52 @@
   "main": "script.js",
   "babel": {
     "presets": [
+      "env",
       "react",
       "es2015"
     ]
   },
   "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.4",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.8.2",
     "jest": "^22.4.4",
+    "jest-webpack": "^0.4.0",
     "path": "^0.12.7",
+    "react-test-renderer": "^16.4.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
+    "webpack": "^4.9.1",
+    "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4"
   },
   "scripts": {
-    "test": "jest",
     "build": "./node_modules/.bin/webpack -w --config webpack.config.js",
-    "wds": "./node_modules/.bin/webpack-dev-server --port 8080 --config webpack.config.js",
-    "start": "webpack-dev-server --hot"
+    "wds": "./node_modules/.bin/webpack-dev-server --port 8090 --config webpack.config.js",
+    "start": "webpack-dev-server --hot",
+    "lint": "eslint **/*.{js,jsx} --quiet",
+    "test": "jest",
+    "test:update": "jest -u",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
